[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/mononoki-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/hslider_ball.tres" type="Theme" id=2]
[ext_resource path="res://tools/mythic_gme/MythicGME.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="MythicGME" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="MythicBanner" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 105.0
margin_right = 1040.0
margin_bottom = 210.0
color = Color( 0.352941, 0, 0, 1 )

[node name="LabelMythicSection" type="Label" parent="MythicBanner"]
anchor_top = 0.0142232
anchor_bottom = 0.0142232
margin_top = 2.0
margin_right = 1000.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 1 )
text = "MYTHIC ORACLE"
align = 1
valign = 1

[node name="ButtonRollOracle" type="Button" parent="."]
margin_left = 40.0
margin_top = 1000.0
margin_right = 1040.0
margin_bottom = 1115.0
custom_fonts/font = SubResource( 1 )
text = "Ask Oracle"

[node name="MythicResultBanner" type="ColorRect" parent="."]
margin_left = 40.0
margin_top = 459.0
margin_right = 1040.0
margin_bottom = 595.0
color = Color( 0.270588, 0.270588, 0.270588, 1 )

[node name="LabelOracleResult" type="RichTextLabel" parent="MythicResultBanner"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -60.0
margin_right = 500.0
margin_bottom = 60.0
custom_fonts/bold_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][b]hmmmm..."
text = "hmmmm..."

[node name="Low" type="Label" parent="."]
margin_left = 40.0
margin_top = 356.0
margin_right = 229.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 2 )
text = "No Way."
valign = 1

[node name="LabelLikelihood" type="Label" parent="."]
margin_left = 360.0
margin_top = 222.0
margin_right = 720.0
margin_bottom = 331.0
custom_fonts/font = SubResource( 2 )
text = "Likelihood"
align = 1
valign = 1

[node name="High" type="Label" parent="."]
margin_left = 805.0
margin_top = 356.0
margin_right = 1048.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 2 )
text = "Surely!"
align = 2
valign = 1

[node name="50-50" type="Label" parent="."]
margin_left = 419.0
margin_top = 356.0
margin_right = 662.0
margin_bottom = 465.0
custom_fonts/font = SubResource( 2 )
text = "50-50"
align = 1
valign = 1

[node name="SliderLikelihood" type="HSlider" parent="."]
margin_left = 60.0
margin_top = 320.0
margin_right = 1020.0
margin_bottom = 375.0
theme = ExtResource( 2 )
max_value = 6.0
value = 3.0
rounded = true
tick_count = 7
ticks_on_borders = true

[connection signal="pressed" from="ButtonRollOracle" to="." method="_on_ButtonRollOracle_pressed"]
[connection signal="value_changed" from="SliderLikelihood" to="." method="_on_SliderLikelihood_value_changed"]
